finalised userlog rework

--- a/app/userlogs/userlogdialog.tmpl.html
+++ b/app/userlogs/userlogdialog.tmpl.html
@@ -1,19 +1,23 @@
-<md-dialog md-theme="{{$root.themePrimary}}" class="md-whiteframe-z1" style="min-width: 800px; overflow: visible"
+<md-dialog md-theme="{{$root.themePrimary}}" class="md-whiteframe-z1" style="min-width: 800px; min-height: 626px; overflow: visible"
            ng-click="vm.showEndDatePicker = false; vm.showDatePicker = false; toggleTags = false;">
     <md-toolbar class="md-toolbar-tools md-whiteframe-z1">
-        <span>User Log Editor</span>
+        <span>{{!editMode? 'User Log Editor': 'User Log Viewer'}}</span>
     </md-toolbar>
-    <md-dialog-content style="padding: 12px; height: 410px" md-theme="{{$root.themePrimaryButtons}}" layout="column">
+    <md-dialog-content style="padding: 12px; min-height: 510px" md-theme="{{$root.themePrimaryButtons}}" layout="column">
         <div layout="row">
-            <div layout="row" layout-align="start center" style="min-width: 220px; padding-top: 20px;">
+            <div layout="row" layout-align="start center" style="min-width: 180px; padding-top: 20px;">
                 <md-input-container flex style="height: 36px; max-width: 135px; margin: 0; padding: 0;">
-                    <input flex type="text" ng-change="onTimeChange()"
+                    <input ng-disabled="!editMode" flex type="text" ng-change="onTimeChange()"
                            data-ng-model="start_time" placeholder="Start Date"
                            title="Start Date 'HH:mm:ss yyyy-MM-dd'"/>
                 </md-input-container>
-                <md-button class="md-icon-button" style="margin-left: 0; margin-top: 3px; width: 36px; height: 36px;"
+                <md-button ng-disabled="!editMode" class="md-icon-button" style="margin-left: 0; margin-right: 0; margin-top: 3px; width: 36px; height: 36px;"
                            ng-click="vm.showDatePicker = !vm.showDatePicker; vm.showEndDatePicker = false; $event.stopPropagation()">
                     <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
+                </md-button>
+                <md-button ng-click="start_time = $root.utcDateTime | date:'yyyy-MM-dd HH:mm:ss'"
+                    style="height: 36px; max-width: 42px; min-width: 42px; margin-left: 0; padding: 0;">
+                    Now
                 </md-button>
                 <datetimepicker ng-show="vm.showDatePicker" ng-init="vm.showDatePicker = false"
                                 class="datepickerMenu md-whiteframe-z1"
@@ -22,15 +26,19 @@
                                 data-on-set-time="vm.showDatePicker = false; onTimeSet(start_time, 'start_time')"></datetimepicker>
             </div>
             <div flex layout="row" layout-align="center center"></div>
-            <div layout="row" layout-align="start center" style="min-width: 220px; padding-top: 20px;">
+            <div layout="row" layout-align="start center" style="min-width: 180px; padding-top: 20px;">
                 <md-input-container flex style="height: 36px; max-width: 135px; margin: 0; padding: 0;">
-                    <input flex type="text" ng-change="onTimeChange()"
+                    <input ng-disabled="!editMode" flex type="text" ng-change="onTimeChange()"
                            data-ng-model="end_time" placeholder="End Date"
                            title="End Date 'HH:mm:ss yyyy-MM-dd'"/>
                 </md-input-container>
-                <md-button class="md-icon-button" style="margin-left: 0; margin-top: 3px; width: 36px; height: 36px;"
+                <md-button ng-disabled="!editMode" class="md-icon-button" style="margin-left: 0; margin-top: 3px; width: 36px; height: 36px;"
                            ng-click="vm.showEndDatePicker = !vm.showEndDatePicker; vm.showDatePicker = false; $event.stopPropagation()">
                     <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
+                </md-button>
+                <md-button ng-click="end_time = $root.utcDateTime | date:'yyyy-MM-dd HH:mm:ss'"
+                    style="height: 36px; max-width: 42px; min-width: 42px; margin-left: 0; padding: 0;">
+                    Now
                 </md-button>
                 <datetimepicker ng-show="vm.showEndDatePicker" ng-init="vm.showEndDatePicker = false"
                                 data-ng-model="end_time" style="position: absolute; right: 16px; top: 122px"
@@ -40,65 +48,67 @@
             </div>
         </div>
         <div class="md-whiteframe-z1" style="margin: 8px 0" flex>
-            <md-input-container style="margin: 16px 0;" class="md-block" flex>
+            <md-input-container style="margin: 16px 0; min-height: 300px; max-height: 300px" class="md-block" flex>
                 <label>Log Content</label>
-                <textarea md-select-on-focus rows="6" md-maxlength="1000" ng-model="content"></textarea>
+                <textarea style="width: 100%; height: 300px;" focus ng-disabled="!editMode" md-select-on-focus rows="10" md-maxlength="1000" ng-model="content"></textarea>
             </md-input-container>
         </div>
 
-        <div layout="row" layout-align="start center" class="md-whiteframe-z1">
-        <md-chips ng-model="selectedTags" md-autocomplete-snap md-require-match="true" flex>
-            <md-autocomplete
-                md-search-text="searchText"
-                md-items="item in querySearch(searchText)"
-                md-item-text="item.name"
-                placeholder="Select tags">
-                <md-item-template>
-                    <span md-highlight-text="searchText" title="{{item.slug}}">{{item.name}}</span>
-                </md-item-template>
-                <md-not-found>
-                    No matches found
-                </md-not-found>
-            </md-autocomplete>
-            <md-chip-template>
+        <div layout="row" layout-align="start center" class="md-whiteframe-z1" style="min-height: 48px">
+            <md-chips ng-model="selectedTags" md-autocomplete-snap md-require-match="true" flex>
+                <md-autocomplete ng-disabled="!editMode"
+                    md-search-text="searchText"
+                    md-items="item in querySearch(searchText)"
+                    md-item-text="item.name"
+                    placeholder="Select tags">
+                    <md-item-template>
+                        <span md-highlight-text="searchText" title="{{item.slug}}">{{item.name}}</span>
+                    </md-item-template>
+                    <md-not-found>
+                        No matches found
+                    </md-not-found>
+                </md-autocomplete>
+                <md-chip-template>
                     <span style="overflow: auto; width: 100%;">
                         <strong>{{$chip.name}}</strong>
                     </span>
-            </md-chip-template>
-            <md-button class="md-fab" aria-label="Remove Tag">
-                <md-icon md-chip-remove md-font-icon="fa-close" style="color:white; fill:white;"></md-icon>
+                </md-chip-template>
+                <md-button class="md-fab" aria-label="Remove Tag">
+                    <md-icon md-chip-remove md-font-icon="fa-close" style="color:white; fill:white;"></md-icon>
+                </md-button>
+            </md-chips>
+            <md-button ng-disabled="!editMode" ng-click="toggleTags = !toggleTags; $event.stopPropagation()" style="margin: 0; padding: 0; min-height: 32px; min-width: 32px">
+                <span class="fa fa-tags"></span>
             </md-button>
-        </md-chips>
-        <md-button ng-click="toggleTags = !toggleTags; $event.stopPropagation()" style="margin: 0; padding: 0; min-height: 32px; min-width: 32px">
-            <span class="fa fa-tags"></span>
-        </md-button>
-        <div ng-init="toggleTags = false" ng-show="toggleTags" id="replyForm">
-            <div id="vertical-container" class="md-whiteframe-z3 tag-popup-list">
-                <div ng-repeat="listed_tag in tags | orderBy:'name' track by $index" class="repeated-item" flex ng-click="addTagFromList(listed_tag)">
-                    {{listed_tag.name}}
+            <div ng-init="toggleTags = false" ng-show="toggleTags" id="replyForm">
+                <div id="vertical-container" class="md-whiteframe-z3 tag-popup-list">
+                    <div ng-repeat="tag in tags | orderBy:'name' track by $index" class="tag-popup-item" flex ng-click="addTagFromList(tag)">
+                        {{tag.name}}
+                    </div>
                 </div>
             </div>
         </div>
+        <div ng-show="attachments.length > 0" layout="column" class="md-whiteframe-z1" style="margin: 8px 0; overflow: auto; min-height: 100px; max-height: 100px" md-theme="{{$root.themePrimaryButtons}}">
+            <div ng-repeat="attachment in attachments" style="min-height: 32px" layout="row" layout-align="start center">
+                <span title="Download {{attachment.name}}" style="margin: 8px; 0" class="fa fa-download" ng-click="downloadFile(attachment)"></span>
+                <span flex>{{attachment.name}}</span>
+                <md-checkbox ng-disabled="!editMode" class="md-primary" ng-model="attachment.delete" style="margin: 0 8px">Delete?</md-checkbox>
+            </div>
         </div>
-
         <div layout="row" layout-align="start center" style="margin: 16px 0">
             <span style="margin-right: 8px">Attachments:</span>
-            <input file-model="myFile" type="file" name="files[]" multiple/>
-        </div>
-        <div layout="column">
-            <div ng-repeat="attach in metadata" style="height: 32px" layout="row" layout-align="space-between center">
-                <span flex>{{attach.m_name}}</span>
-                <span flex="10" style="margin-left: 4px;" class="fa fa-download" ng-click="getFile(attach.m_val, attach.m_name, ulog.id)"></span>
-                <md-checkbox flex="10" ng-checked="exists(attach.m_name, metadata_to_del)" ng-click="toggle(attach.m_name, metadata_to_del)">del?</md-checkbox>
-            </div>
+            <input ng-disabled="!editMode" style="font-size: 12px" file-model="filesToUpload" type="file" name="files[]" multiple/>
         </div>
     </md-dialog-content>
     <md-dialog-actions layout="row">
-        <div ng-show ="endDateTimeError" style="color:red;">
+        <span ng-show="endDateTimeError" style="color: #F44336">
             End date cannot be before start date!
-        </div>
-        <md-button ng-click="hide()">Cancel</md-button>
-        <md-button ng-click="add()" ng-disabled="endDateTimeError">Submit</md-button>
+        </span>
+        <span ng-show="uploadingFiles" style="font-weight: bold">
+            Uploading Files, please wait...
+        </span>
+        <md-button ng-click="hide()">{{!editMode? 'Close' : 'Cancel'}}</md-button>
+        <md-button ng-hide="!editMode" ng-click="submit()" ng-disabled="endDateTimeError || uploadingFiles || content.length == 0">Submit</md-button>
     </md-dialog-actions>
     </div>
 </md-dialog>
