--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -17,6 +17,7 @@
         <md-button class="md-raised md-primary" ng-click="$root.stateGo('instrumental-config')">Instrumental Configuration</md-button>
         <md-button class="md-raised md-primary" ng-click="$root.stateGo('admin')">User Administration</md-button>
         <md-button ng-show="$root.expertUser" class="md-raised md-primary" ng-click="$root.stateGo('userlog-tags')">User Log Tags</md-button>
+        <md-button class="md-raised md-primary" ng-click="$root.stateGo('userlog-reports')">User Log Reports</md-button>
         <md-button class="md-raised md-primary" ng-click="$root.stateGo('config')">KATGUI Configuration</md-button>
         <md-button class="md-raised md-primary" ng-click="$root.stateGo('about')">About KATGUI</md-button>
     </div>
