--- a/app/userlogs/userlog-reports.html
+++ b/app/userlogs/userlog-reports.html
@@ -1,128 +1,114 @@
-<md-tab flex label="Userlog Reports" class="md-whiteframe-z1" style="overflow: auto">
-    <div layout="column" layout-align="start center" ng-click="vm.showEndDatePicker = false; vm.showDatePicker = false;"
+<div flex style="padding: 16px; min-width: 600px" ng-controller="UserlogReportsCtrl as vm" layout="row">
+    <div flex layout="column" ng-click="vm.showEndDatePicker = false; vm.showDawtePicker = false;"
         style="cursor: inherit">
-        <div layout="column" style="width: 100%">
-            <md-toolbar md-theme="{{themePrimary}}" class="md-toolbar-tools-medium md-whiteframe-z1">
-                <span flex></span>
+        <md-toolbar md-theme="{{themePrimary}}" class="md-whiteframe-z1" layout="column" style="min-height: 144px">
+            <div md-theme="{{themePrimaryButtons}}" class="md-toolbar-tools" layout="row" layout-align="start center" style="padding: 0">
+                <span style="margin-left: 8px" flex>Report Parameters</span>
                 <input class="fade-in search-input-box" style="width: 200px; max-width: 200px" type="search"
                        ng-model-options="{ debounce: 300 }" ng-model="vm.q2" placeholder="Filter Userlogs..."/>
-            </md-toolbar>
-            <div md-theme="{{themePrimaryButtons}}" class="md-whiteframe-z1 md-toolbar-tools" layout="row" layout-align="start center" style="padding: 0">
-                    <span style="margin-left: 8px" flex>Report Parameters</span>
-
-                    <div layout="row" layout-align="start center" style="margin: 0 4px; font-size: 14px;">
-                        <div layout="row" layout-align="center center" style="min-width: 220px; position: relative">
-                            <md-input-container flex md-no-float style="padding: 0;">
-                                <input flex type="text"
-                                       data-ng-model="vm.blank_query.start_time" placeholder="Start Date"
-                                       title="Start Date 'HH:mm:ss yyyy-MM-dd'"
-                                       ng-click="vm.showDatePicker = !vm.showDatePicker; vm.showEndDatePicker = false; $event.stopPropagation()"/>
-                            </md-input-container>
-                            <span></span>
-                            <md-button class="md-icon-button" style="margin-left: 0; margin-top: 3px; width: 40px; height: 40px;"
-                                       ng-click="vm.showDatePicker = !vm.showDatePicker; vm.showEndDatePicker = false; $event.stopPropagation()">
-                                <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
-                            </md-button>
-                            <datetimepicker ng-show="vm.showDatePicker" ng-init="vm.showDatePicker = false"
-                                            class="datepickerMenu md-whiteframe-z1"
-                                            data-ng-model="vm.blank_query.start_time" style="position: absolute; left: 0; top: 34px"
-                                            data-datetimepicker-config="{ dropdownSelector: &apos;#dropdown2&apos; }"
-                                            data-on-set-time="vm.showDatePicker = false; vm.onTimeSet(vm.blank_query.start_time, vm.blank_query, 'start_time')"></datetimepicker>
-                        </div>
-                        <!--<span style="margin: 0 8px"></span>-->
-                        <div layout="row" layout-align="center center" style="min-width: 220px;  position: relative">
-                            <md-input-container flex md-no-float style="padding: 0;">
-                                <input flex type="text"
-                                       data-ng-model="vm.blank_query.end_time" placeholder="End Date"
-                                       title="End Date 'HH:mm:ss yyyy-MM-dd'"
-                                       ng-click="vm.showEndDatePicker = !vm.showEndDatePicker; vm.showDatePicker = false; $event.stopPropagation()"/>
-                            </md-input-container>
-                            <span></span>
-                            <md-button class="md-icon-button" style="margin-left: 0;width: 40px; height: 40px;"
-                                       ng-click="vm.showEndDatePicker = !vm.showEndDatePicker; vm.showDatePicker = false; $event.stopPropagation()">
-                                <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
-                            </md-button>
-                            <datetimepicker ng-show="vm.showEndDatePicker" ng-init="vm.showEndDatePicker = false"
-                                            data-ng-model="vm.blank_query.end_time" style="position: absolute; left: 0; top: 34px"
-                                            class="datepickerMenu md-whiteframe-z1"
-                                            data-datetimepicker-config="{ dropdownSelector: &apos;#dropdown4&apos; }"
-                                            data-on-set-time="vm.showEndDatePicker = false; vm.onTimeSet(vm.blank_query.end_time, vm.blank_query, 'end_time')"></datetimepicker>
-                        </div>
-                        <md-checkbox ng-model="vm.include_activity_logs" aria-label="Include Activity Logs"
-                                     style="font-size: 12px; width: 120px; line-height: 1.3;">
-                            Include Activity logs in Export
-                        </md-checkbox>
-                        <md-button class="add-tab md-primary md-raised" ng-click="vm.queryUserlogs(event, vm.blank_query)"
-                                   style="margin-right: 0;">Preview Report
+                <div layout="row" layout-align="start center" style="margin: 0 4px; font-size: 14px;">
+                    <div layout="row" layout-align="center center" style="min-width: 180px; position: relative">
+                        <md-input-container flex md-no-float style="height: 36px; max-width: 135px; margin: 0; padding: 0;">
+                            <input flex type="text" style="color: white"
+                                   data-ng-model="vm.startTime" placeholder="Start Date"
+                                   title="Start Date 'HH:mm:ss yyyy-MM-dd'"/>
+                        </md-input-container>
+                        <span></span>
+                        <md-button class="md-icon-button" style="margin-left: 0; margin-top: 3px; width: 40px; height: 40px;"
+                                   ng-click="vm.showDatePicker = !vm.showDatePicker; vm.showEndDatePicker = false; $event.stopPropagation()">
+                            <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
                         </md-button>
-                        <md-button class="add-tab md-primary md-raised" ng-click="vm.exportPdf(vm.blank_query.start_time, vm.blank_query.end_time)"
-                                   style="margin-right: 0;">Export PDF
-                        </md-button>
+                        <datetimepicker ng-show="vm.showDatePicker" ng-init="vm.showDatePicker = false"
+                                        class="datepickerMenu md-whiteframe-z1"
+                                        data-ng-model="vm.startTime" style="position: absolute; left: 0; top: 34px; min-width: 220px"
+                                        data-datetimepicker-config="{ dropdownSelector: &apos;#dropdown2&apos; }"
+                                        data-on-set-time="vm.showDatePicker = false; vm.onTimeSet(vm.startTime, vm.blank_query, 'start_time')"></datetimepicker>
                     </div>
-            </div>
-
-                <div layout="row" layout-align="start center">
-                    <md-button ng-click="toggleTags = !toggleTags; $event.stopPropagation()" style="margin: 0; padding: 0; min-height: 32px; min-width: 32px">
-                        <span class="fa fa-tags"></span>
+                    <div layout="row" layout-align="center center" style="min-width: 180px; position: relative">
+                        <md-input-container flex md-no-float style="height: 36px; max-width: 135px; margin: 0; padding: 0;">
+                            <input flex type="text" style="color: white"
+                                   data-ng-model="vm.endTime" placeholder="End Date"
+                                   title="End Date 'HH:mm:ss yyyy-MM-dd'"/>
+                        </md-input-container>
+                        <span></span>
+                        <md-button class="md-icon-button" style="margin-left: 0;width: 40px; height: 40px;"
+                                   ng-click="vm.showEndDatePicker = !vm.showEndDatePicker; vm.showDatePicker = false; $event.stopPropagation()">
+                            <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
+                        </md-button>
+                        <datetimepicker ng-show="vm.showEndDatePicker" ng-init="vm.showEndDatePicker = false"
+                                        data-ng-model="vm.endTime" style="position: absolute; left: 0; top: 34px; min-width: 220px"
+                                        class="datepickerMenu md-whiteframe-z1"
+                                        data-datetimepicker-config="{ dropdownSelector: &apos;#dropdown4&apos; }"
+                                        data-on-set-time="vm.showEndDatePicker = false; vm.onTimeSet(vm.endTime, vm.blank_query, 'end_time')"></datetimepicker>
+                    </div>
+                    <md-checkbox md-theme="{{$root.themePrimaryButtons}}" ng-model="vm.includeActivityLogs" class="md-primary"
+                                 style="font-size: 12px; width: 120px; line-height: 1.3; margin: 0">
+                        Include Activity logs in Export
+                    </md-checkbox>
+                    <md-button class="add-tab md-primary md-raised" ng-click="vm.queryUserlogs(event)"
+                               style="margin-right: 0;">Preview Report
                     </md-button>
-                    <div ng-init="toggleTags = false" ng-show="toggleTags" style="height: 100px; width: 200px; position: absolute; bottom: 100px; background-color: white; border: 1px solid darkgray; box-shadow: 10px 10px 5px #888888; overflow: auto;">
-                            <div ng-repeat="listed_tag in vm.tags track by $index" class="repeated-item" flex ng-click="vm.addTagFromList(listed_tag)">
-                                {{listed_tag.name}}
-                            </div>
-                    </div>
-                    <md-chips ng-model="vm.tagChips" md-autocomplete-snap md-require-match flex>
-                        <md-autocomplete
-                            md-search-text="searchText"
-                            md-no-cache="True"
-                            md-items="item in vm.querySearch(searchText)"
-                            md-item-text="item.name"
-                            placeholder="Select tags">
-                            <md-item-template>
-                                <span md-highlight-text="searchText" title="{{item.slug}}">{{item.name}}</span>
-                            </md-item-template>
-                            <md-not-found>
-                                No matches found
-                            </md-not-found>
-                        </md-autocomplete>
-                        <md-chip-template>
-                            <span style="font-size:small">{{$chip.name}}</span>
-                        </md-chip-template>
-                        <md-button class="md-fab" aria-label="Remove Tag">
-                            <md-icon md-chip-remove md-font-icon="fa-close" style="color:white; fill:white;"></md-icon>
-                        </md-button>
-                    </md-chips>
+                    <md-button ng-disabled="vm.reportUserlogs.length === 0" class="add-tab md-primary md-raised" ng-click="vm.exportPdf()"
+                               style="margin-right: 0;">Export PDF
+                    </md-button>
                 </div>
-
-        </div>
-        <div id="printarea" flex layout="column" style="width:100%" ng-show="vm.report_userlogs.length > 0">
-            <md-list>
-                <md-list-item style="padding: 0 8px">
-                    <div class="md-list-item-text" style="font-size: 18px; font-weight: bold;" layout="row" flex>
-                        <span style="width: 130px">User</span>
-                        <span style="width: 150px">Event Started</span>
-                        <span style="width: 150px">Event Ended</span>
-                        <span style="width: 150px">Userlog Content</span>
-                    </div>
-                </md-list-item>
-                <md-list-item ng-repeat="rlog in vm.filtered_report_userlogs = (vm.report_userlogs | regexSearch:vm.orderByUserLogsFields:vm.q2) track by $index"
-                              style="padding: 0 8px; min-height: 32px">
-                    <md-divider></md-divider>
-                    <div class="md-list-item-text" style="font-size:small" flex
-                         layout="row" ng-click="vm.getCompleteUserLogView(rlog, vm.filtered_report_userlogs, $event); $event.stopPropagation();">
-                        <span style="width: 130px">{{rlog.name}}</span>
-                        <span style="width: 150px">{{rlog.start_time | date:'yyyy-MM-dd HH:mm:ss'}}</span>
-                        <span style="width: 150px">{{rlog.end_time | date:'yyyy-MM-dd HH:mm:ss'}}</span>
-                        <span flex>{{rlog.content}}</span>
-                        <span class="md-caption" ng-show="rlog.attachment_count > 0">
-                            {{rlog.attachment_count}}
-                            <md-icon class="fa" md-font-icon="fa-paperclip"></md-icon>
-                            <md-tooltip md-direction="left">
-                                    {{rlog.attachments}}
-                            </md-tooltip>
+            </div>
+            <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" style="margin: 4px">
+                <md-chips ng-model="vm.filterTags" style="margin-bottom: 24px; padding: 0 8px" md-autocomplete-snap md-require-match="true" flex>
+                    <md-autocomplete
+                        md-search-text="searchText"
+                        md-items="item in vm.querySearch(searchText)"
+                        md-item-text="item.name"
+                        placeholder="Select tags">
+                        <md-item-template>
+                            <span md-highlight-text="searchText" title="{{item.slug}}">{{item.name}}</span>
+                        </md-item-template>
+                        <md-not-found>
+                            No matches found
+                        </md-not-found>
+                    </md-autocomplete>
+                    <md-chip-template>
+                        <span style="overflow: auto; width: 100%;">
+                            <strong>{{$chip.name}}</strong>
                         </span>
+                    </md-chip-template>
+                    <md-button class="md-fab">
+                        <md-icon md-chip-remove md-font-icon="fa-close" style="color:white; fill:white;"></md-icon>
+                    </md-button>
+                </md-chips>
+                <md-button ng-click="toggleTags = !toggleTags; $event.stopPropagation()" style="margin: 0; padding: 0; min-height: 32px; min-width: 32px">
+                    <span class="fa fa-tags"></span>
+                </md-button>
+                <div ng-init="toggleTags = false" ng-show="toggleTags" class="md-whiteframe-z3 tag-popup-list" style="top: 120px; right: 0px">
+                    <div ng-repeat="tag in vm.tags | orderBy:'name' track by $index" class="tag-popup-item" flex ng-click="vm.filterTags.push(tag)">
+                        {{tag.name}}
                     </div>
-                </md-list-item>
-            </md-list>
+                </div>
+            </div>
+        </md-toolbar>
+        <div layout="column" class="md-whiteframe-z1" style="overflow: auto" ng-show="vm.reportUserlogs.length > 0">
+            <div class="md-list-item-text" style="min-height: 42px; max-height: 42px; padding: 8px; border-bottom: 1px solid currentColor; font-size: 18px; font-weight: bold;" layout="row" flex>
+                <span style="width: 130px">User</span>
+                <span style="width: 150px">Start</span>
+                <span style="width: 150px">End</span>
+                <span flex>Content</span>
+                <span>Tags</span>
+            </div>
+            <div ng-repeat="userlog in vm.filteredReportUserlogs = (vm.reportUserlogs | regexSearch:vm.userLogsFields:vm.q2 | filter:vm.filterByTag) track by $index" ng-click="vm.editUserLog(userlog, $event)">
+                <md-divider></md-divider>
+                <div style="padding: 8px" class="md-list-item-text" flex layout="row" layout-align="start center">
+                    <span style="width: 130px">{{userlog.user.name}}</span>
+                    <span style="width: 150px">{{userlog.start_time | date:'yyyy-MM-dd HH:mm:ss'}}</span>
+                    <span style="width: 150px">{{userlog.end_time | date:'yyyy-MM-dd HH:mm:ss'}}</span>
+                    <span flex>{{userlog.content}}</span>
+                    <i style="font-size: 12px; margin-right: 4px" ng-repeat="tag in userlog.tags | orderBy:'name' track by $index" ng-style="{'deactivated-tag': !tag.activated}">{{tag.name}}{{$last? '' : ','}}</i>
+                    <span style="min-width: 24px; margin-left: 8px; font-size: 12px">
+                        <span ng-show="userlog.attachment_count>0">({{userlog.attachment_count}}
+                        <span class="fa fa-paperclip"></span>)
+                        </span>
+                    </span>
+                </div>
+            </div>
         </div>
     </div>
-</md-tab>
+</div>
