--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -114,7 +114,8 @@
         </md-toolbar>
         <div class="md-whiteframe-z1" flex style="padding: 8px; min-height: 235px; margin-bottom: 8px" layout="column" ng-show="!vm.hideWindChart">
             <multi-line-chart flex redraw-function="vm.redrawWindChart" y-max="vm.yAxisWindMaxValue" hide-context-zoom="true"
-                              y-min="vm.yAxisWindMinValue" mouse-over-tooltip="true" clear-function="vm.clearWindChart"></multi-line-chart>
+                              y-min="vm.yAxisWindMinValue" mouse-over-tooltip="true" clear-function="vm.clearWindChart"
+                              remove-sensor-function="vm.removeSensorLine"></multi-line-chart>
         </div>
         <md-toolbar class="md-toolbar-tools-medium md-whiteframe-z1" style="padding-right: 0">
             <span flex ng-click="vm.hideWeatherChart = !vm.hideWeatherChart">Pressure, Humidity and Temperature</span>
